--- a/ventoline.html
+++ b/ventoline.html
@@ -141,11 +141,10 @@ a.back span{ font-size:1.1rem; }
       <div class="badge" id="badgeText">Kort og let</div>
     </div>
 
-    <!-- Identiske sektion-ikoner som de andre -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon use">💊</div>
-        <div class="section-title" id="sec0Title">Hvad er Ventoline? <small>(What is it?)</small></div>
+        <div class="section-title" id="sec0Title">Hvad er Ventoline?</div>
       </div>
       <ul id="sec0List"></ul>
     </div>
@@ -153,7 +152,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon use">✔</div>
-        <div class="section-title" id="sec1Title">Hvad bruges det til? <small>(Use)</small></div>
+        <div class="section-title" id="sec1Title">Hvad bruges det til?</div>
       </div>
       <ul id="sec1List"></ul>
     </div>
@@ -161,7 +160,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon dose">⏰</div>
-        <div class="section-title" id="sec2Title">Sådan bruges inhalatoren <small>(How to use)</small></div>
+        <div class="section-title" id="sec2Title">Sådan bruges inhalatoren</div>
       </div>
       <ul id="sec2List"></ul>
     </div>
@@ -169,7 +168,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon food">🍽️</div>
-        <div class="section-title" id="sec3Title">Mad og drikke <small>(Food & drink)</small></div>
+        <div class="section-title" id="sec3Title">Mad og drikke</div>
       </div>
       <ul id="sec3List"></ul>
     </div>
@@ -177,7 +176,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon warn">!</div>
-        <div class="section-title" id="sec4Title">Advarsler <small>(Warnings)</small></div>
+        <div class="section-title" id="sec4Title">Advarsler</div>
       </div>
       <ul id="sec4List"></ul>
     </div>
@@ -185,7 +184,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon side">⚠️</div>
-        <div class="section-title" id="sec5Title">Bivirkninger <small>(Side effects)</small></div>
+        <div class="section-title" id="sec5Title">Bivirkninger</div>
       </div>
       <ul id="sec5List"></ul>
     </div>
@@ -193,7 +192,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon interact">⇆</div>
-        <div class="section-title" id="sec6Title">Interaktioner <small>(Interactions)</small></div>
+        <div class="section-title" id="sec6Title">Interaktioner</div>
       </div>
       <ul id="sec6List"></ul>
     </div>
@@ -201,7 +200,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon ramadan">☾</div>
-        <div class="section-title" id="sec7Title">Ramadan og faste <small>(Fasting)</small></div>
+        <div class="section-title" id="sec7Title">Ramadan og faste</div>
       </div>
       <ul id="sec7List"></ul>
     </div>
@@ -209,7 +208,7 @@ a.back span{ font-size:1.1rem; }
     <div class="section">
       <div class="section-header">
         <div class="section-icon store">⧉</div>
-        <div class="section-title" id="sec8Title">Opbevaring <small>(Storage)</small></div>
+        <div class="section-title" id="sec8Title">Opbevaring</div>
       </div>
       <ul id="sec8List"></ul>
     </div>
@@ -263,18 +262,7 @@ function fillList(id, arr){
 function setSectionTitle(elId, title){
   const el = document.getElementById(elId);
   if(!el) return;
-  const small = el.querySelector("small");
-  const t = (title || "").trim();
-  if(small){
-    const first = el.childNodes[0];
-    if(first && first.nodeType === Node.TEXT_NODE){
-      first.textContent = t + " ";
-    }else{
-      el.insertBefore(document.createTextNode(t + " "), small);
-    }
-  }else{
-    el.textContent = t;
-  }
+  el.textContent = (title || "").trim();
 }
 
 const T = {
@@ -338,7 +326,6 @@ const T = {
       "Beskyt spray mod varme og direkte sollys.",
       "Hold øje med udløbsdato og antal doser (hvis tæller findes)."
     ],
-
     footer1:"Hvis du har brug for mere information, kontakt apoteket eller din læge.",
     footer2:"Udarbejdet af farmakonomen: Ibrahim Dahir Hanaf"
   },
@@ -469,10 +456,261 @@ const T = {
     ],
     footer1:"Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
     footer2:"(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)<br/><br/>Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>(Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)"
+  },
+
+  ar:{
+    pageTitle:"فنتولين – ضيق التنفس",
+    hdrH1:"فنتولين – ضيق التنفس",
+    hdrP:"معلومات مختصرة للمرضى وأفراد الأسرة.",
+    backText:"العودة إلى قائمة الأدوية",
+    langLabel:"اختر اللغة:",
+    drugName:"فنتولين (سالبوتامول)",
+    drugForm:"استنشاق (بخاخ/بودرة) سريع المفعول",
+    badgeText:"مختصر وواضح",
+
+    sec0Title:"ما هو فنتولين؟",
+    sec0:[
+      "فنتولين (سالبوتامول) دواء <span class='highlight'>سريع المفعول</span> يوسع الشعب الهوائية.",
+      "يُستخدم كدواء إسعافي عند ضيق النفس أو الصفير."
+    ],
+    sec1Title:"لماذا يُستخدم؟",
+    sec1:[
+      "تخفيف سريع لأعراض الربو ومرض الانسداد الرئوي المزمن.",
+      "قد يُستخدم قبل الرياضة إذا وصف الطبيب ذلك."
+    ],
+    sec2Title:"طريقة الاستخدام",
+    sec2:[
+      "استخدم حسب الخطة الطبية وغالباً عند الحاجة.",
+      "للبخاخ: رجّ، ازفر، ضع الفم على الفوهة، اضغط مرة و<span class='highlight'>استنشق ببطء وعمق</span>، احبس النفس 5–10 ثوانٍ.",
+      "السبايسر يساعد خاصة للأطفال.",
+      "إذا احتجته كثيراً تواصل مع الطبيب."
+    ],
+    sec3Title:"الطعام والشراب",
+    sec3:["لا علاقة له بالطعام.","اشرب ماءً إذا حدث جفاف بالفم."],
+    sec4Title:"تحذيرات",
+    sec4:[
+      "اطلب مساعدة عاجلة إذا كانت الأعراض شديدة أو إذا لم يساعد كالمعتاد.",
+      "الإفراط في الاستخدام قد يكون خطيراً—راجع الطبيب عند الحاجة المتكررة.",
+      "أخبر الطبيب إذا لديك أمراض قلب/غدة."
+    ],
+    sec5Title:"الآثار الجانبية",
+    sec5:["رجفة، خفقان، توتر.","صداع أو تقلصات عضلية.","نادرًا تهيج قصير بالصدر."],
+    sec6Title:"التداخلات",
+    sec6:["بعض الأدوية قد تقلل المفعول مثل بعض حاصرات بيتا.","أخبر الصيدلي/الطبيب بكل أدويتك."],
+    sec7Title:"رمضان",
+    sec7:[
+      "إذا كان لديك تساؤل ديني فاسأل إمامك والطبيب.",
+      "صحياً: استخدمه عند الحاجة—سلامتك أولاً."
+    ],
+    sec8Title:"الحفظ",
+    sec8:["يحفظ بدرجة الغرفة وبعيداً عن الأطفال.","احمِ البخاخ من الحرارة والشمس.","تحقق من الصلاحية وعدد الجرعات."],
+    footer1:"للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
+    footer2:"إعداد: إبراهيم ظاهر حنف"
+  },
+
+  tr:{
+    pageTitle:"Ventoline – nefes darlığı",
+    hdrH1:"Ventoline – nefes darlığı",
+    hdrP:"Hasta ve yakınları için kısa bilgi.",
+    backText:"İlaç listesine geri dön",
+    langLabel:"Dil seçin:",
+    drugName:"Ventoline (salbutamol)",
+    drugForm:"İnhalasyon (sprey/toz) hızlı etkili",
+    badgeText:"Kısa ve anlaşılır",
+
+    sec0Title:"Ventoline nedir?",
+    sec0:[
+      "Hava yollarını açan <span class='highlight'>hızlı etkili</span> bir inhalerdir.",
+      "Ani nefes darlığı ve hışıltıda rahatlatıcı olarak kullanılır."
+    ],
+    sec1Title:"Ne için kullanılır?",
+    sec1:[
+      "Astım ve KOAH’ta hızlı rahatlama.",
+      "Doktor önerirse egzersiz öncesi."
+    ],
+    sec2Title:"Nasıl kullanılır?",
+    sec2:[
+      "Genellikle ihtiyaç halinde, reçeteye göre kullanılır.",
+      "Sprey: çalkala, nefes ver, ağızlığı yerleştir, bir kez bas ve <span class='highlight'>yavaş-derin nefes al</span>, 5–10 sn tut.",
+      "Spacer özellikle çocuklarda yardımcı olur.",
+      "Sık ihtiyaç varsa doktora başvurun."
+    ],
+    sec3Title:"Yemek ve içecek",
+    sec3:["Yemekten bağımsızdır.","Ağız kurursa su içebilirsiniz."],
+    sec4Title:"Uyarılar",
+    sec4:["Şiddetli atakta veya normalden az etkide acil yardım alın.","Aşırı kullanım risklidir; sık kullanıyorsanız doktorla görüşün."],
+    sec5Title:"Yan etkiler",
+    sec5:["Titreme, çarpıntı, huzursuzluk.","Baş ağrısı veya kas krampları.","Nadir: kısa süreli tahriş."],
+    sec6Title:"Etkileşimler",
+    sec6:["Bazı beta blokerler etkiyi azaltabilir.","Tüm ilaçlarınızı bildirin."],
+    sec7Title:"Ramazan",
+    sec7:["Dini konuda şüpheniz varsa imam ve doktorla konuşun.","Sağlık açısından ihtiyaç olduğunda kullanın."],
+    sec8Title:"Saklama",
+    sec8:["Oda sıcaklığında, çocuklardan uzak tutun.","Isı ve güneşten koruyun.","Son kullanma tarihini kontrol edin."],
+    footer1:"Daha fazla bilgi için eczane veya doktorunuza başvurun.",
+    footer2:"Hazırlayan: Ibrahim Dahir Hanaf"
+  },
+
+  ur:{
+    pageTitle:"وینٹولین – سانس کی تکلیف",
+    hdrH1:"وینٹولین – سانس کی تکلیف",
+    hdrP:"مریضوں اور اہلِ خانہ کے لیے مختصر معلومات۔",
+    backText:"فہرست پر واپس",
+    langLabel:"زبان منتخب کریں:",
+    drugName:"وینٹولین (سالبیوٹامول)",
+    drugForm:"انہیلر (سپرے/پاؤڈر) تیز اثر",
+    badgeText:"مختصر اور واضح",
+
+    sec0Title:"وینٹولین کیا ہے؟",
+    sec0:[
+      "یہ <span class='highlight'>تیز اثر</span> انہیلر ہے جو سانس کی نالیاں کھولتا ہے۔",
+      "اچانک سانس پھولنے یا ویزنگ میں بطور ریلیور استعمال ہوتا ہے۔"
+    ],
+    sec1Title:"کس لیے استعمال ہوتی ہے؟",
+    sec1:[
+      "دمہ اور COPD میں فوری آرام۔",
+      "اگر ڈاکٹر کہے تو ورزش سے پہلے۔"
+    ],
+    sec2Title:"استعمال کا طریقہ",
+    sec2:[
+      "اکثر ضرورت کے وقت، اپنے پلان کے مطابق استعمال کریں۔",
+      "سپرے: ہلائیں، سانس باہر نکالیں، منہ لگائیں، ایک بار دبائیں اور <span class='highlight'>آہستہ گہرا سانس لیں</span>، 5–10 سیکنڈ روکیں۔",
+      "اسپیسر بچوں کیلئے مفید ہے۔",
+      "اگر بار بار ضرورت ہو تو ڈاکٹر سے رابطہ کریں۔"
+    ],
+    sec3Title:"کھانا پینا",
+    sec3:["کھانے سے تعلق نہیں۔","منہ خشک ہو تو پانی پیئیں۔"],
+    sec4Title:"احتیاطیں",
+    sec4:["شدید اٹیک یا معمول سے کم اثر ہو تو فوری مدد لیں۔","زیادہ استعمال خطرناک ہو سکتا ہے؛ بار بار ضرورت ہو تو ڈاکٹر سے بات کریں۔"],
+    sec5Title:"مضر اثرات",
+    sec5:["ہاتھوں میں کپکپی، دل کی دھڑکن، بے چینی۔","سر درد یا پٹھوں میں کھنچاؤ۔","کبھی کبھار سینے میں ہلکی جلن۔"],
+    sec6Title:"تداخلات",
+    sec6:["کچھ بیٹا بلاکرز اثر کم کر سکتے ہیں۔","اپنی تمام ادویات بتائیں۔"],
+    sec7Title:"رمضان",
+    sec7:["دینی پہلو میں شک ہو تو امام اور ڈاکٹر سے بات کریں۔","صحت کیلئے ضرورت کے وقت استعمال کریں۔"],
+    sec8Title:"محفوظ رکھنا",
+    sec8:["کمرہ درجہ حرارت پر، بچوں سے دور۔","گرمی اور دھوپ سے بچائیں۔","ایکسپائری چیک کریں۔"],
+    footer1:"مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
+    footer2:"مرتب کردہ: ابراہیم ظاہر حنف"
+  },
+
+  fa:{
+    pageTitle:"ونتولین – تنگی نفس",
+    hdrH1:"ونتولین – تنگی نفس",
+    hdrP:"اطلاعات کوتاه برای بیماران و خانواده‌ها.",
+    backText:"بازگشت به فهرست",
+    langLabel:"انتخاب زبان:",
+    drugName:"ونتولین (سالبوتامول)",
+    drugForm:"استنشاقی (اسپری/پودر) سریع‌الاثر",
+    badgeText:"کوتاه و روشن",
+
+    sec0Title:"ونتولین چیست؟",
+    sec0:[
+      "داروی استنشاقی <span class='highlight'>سریع‌الاثر</span> برای باز کردن راه‌های هوایی است.",
+      "برای حمله ناگهانی تنگی نفس/خس‌خس استفاده می‌شود."
+    ],
+    sec1Title:"موارد مصرف",
+    sec1:[
+      "تسکین سریع در آسم و COPD.",
+      "در صورت تجویز، قبل از ورزش."
+    ],
+    sec2Title:"نحوه استفاده",
+    sec2:[
+      "معمولاً در صورت نیاز طبق برنامه.",
+      "اسپری: تکان دهید، بازدم کنید، دهان را روی دهانه بگذارید، یک پاف و <span class='highlight'>آرام و عمیق</span> دم کنید، 5–10 ثانیه نگه دارید.",
+      "اسپیسر کمک می‌کند.",
+      "اگر زیاد نیاز دارید با پزشک تماس بگیرید."
+    ],
+    sec3Title:"غذا و نوشیدنی",
+    sec3:["به غذا ربطی ندارد.","در خشکی دهان آب بنوشید."],
+    sec4Title:"هشدارها",
+    sec4:["در حمله شدید یا اثر کمتر از معمول فوراً کمک بگیرید.","مصرف زیاد خطرناک است؛ در نیاز مکرر با پزشک صحبت کنید."],
+    sec5Title:"عوارض",
+    sec5:["لرزش، تپش قلب، بی‌قراری.","سردرد یا گرفتگی عضلات.","نادر: تحریک کوتاه راه هوایی."],
+    sec6Title:"تداخلات",
+    sec6:["برخی بتابلوکرها اثر را کم می‌کنند.","داروهای خود را اعلام کنید."],
+    sec7Title:"رمضان",
+    sec7:["در صورت شک دینی با امام و پزشک مشورت کنید.","از نظر سلامت در صورت نیاز استفاده کنید."],
+    sec8Title:"نگهداری",
+    sec8:["در دمای اتاق و دور از دسترس کودکان.","از گرما و نور مستقیم محافظت شود.","انقضا را بررسی کنید."],
+    footer1:"برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
+    footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
+  },
+
+  prs:{
+    pageTitle:"ونتولین – نفس‌تنگی",
+    hdrH1:"ونتولین – نفس‌تنگی",
+    hdrP:"معلومات کوتاه برای مریضان و خانواده‌ها.",
+    backText:"بازگشت به فهرست",
+    langLabel:"انتخاب زبان:",
+    drugName:"ونتولین (سالبوتامول)",
+    drugForm:"استنشاقی (سپری/پودر) سریع‌الاثر",
+    badgeText:"کوتاه و واضح",
+
+    sec0Title:"ونتولین چیست؟",
+    sec0:["دوای سریع‌الاثر است که راه‌های هوا را باز می‌کند و در حمله نفس‌تنگی استفاده می‌شود."],
+    sec1Title:"برای چی استفاده می‌شود؟",
+    sec1:["آسم و COPD برای آرامش سریع.","در صورت تجویز قبل از ورزش."],
+    sec2Title:"چگونه استفاده شود؟",
+    sec2:[
+      "طبق پلان، اکثر وقت هنگام ضرورت.",
+      "سپری: تکان دهید، بازدم، یک پاف و <span class='highlight'>آرام و عمیق</span> دم کنید، 5–10 ثانیه نگه دارید.",
+      "اسپیسر کمک می‌کند.",
+      "اگر زیاد ضرورت پیدا کردید با داکتر تماس بگیرید."
+    ],
+    sec3Title:"غذا و نوشیدنی",
+    sec3:["به غذا ربط ندارد.","اگر دهان خشک شد آب بنوشید."],
+    sec4Title:"هشدارها",
+    sec4:["در حمله شدید یا اثر کمتر از معمول عاجل کمک بگیرید.","استفاده زیاد خطر دارد؛ در نیاز مکرر با داکتر صحبت کنید."],
+    sec5Title:"عوارض",
+    sec5:["لرزش، تپش قلب، بی‌قراری.","سردرد یا گرفتگی عضلات.","نادر: تحریک کوتاه."],
+    sec6Title:"تداخلات",
+    sec6:["بعضی بتابلوکرها اثر را کم می‌کند.","تمام دواها را اطلاع دهید."],
+    sec7Title:"رمضان",
+    sec7:["اگر سوال دینی دارید با امام و داکتر صحبت کنید.","برای صحت، هنگام ضرورت استفاده کنید."],
+    sec8Title:"نگهداری",
+    sec8:["در دمای اتاق و دور از اطفال.","از گرما و آفتاب محافظت کنید.","انقضا را ببینید."],
+    footer1:"برای معلومات بیشتر با دواخانه یا داکتر تماس بگیرید.",
+    footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
+  },
+
+  ps:{
+    pageTitle:"ونټولین – ساه لنډي",
+    hdrH1:"ونټولین – ساه لنډي",
+    hdrP:"د ناروغانو او کورنۍ لپاره لنډ معلومات.",
+    backText:"لېست ته بېرته",
+    langLabel:"ژبه وټاکئ:",
+    drugName:"ونټولین (سالبوټامول)",
+    drugForm:"استنشاق (سپری/پوډر) چټک اثر",
+    badgeText:"لنډ او روښانه",
+
+    sec0Title:"ونټولین څه شی دی؟",
+    sec0:["چټک اثر استنشاقي درمل دي چې د ساه لارې خلاصوي او د ناڅاپي ساه لنډۍ لپاره کارېږي."],
+    sec1Title:"د څه لپاره؟",
+    sec1:["په اسما او COPD کې چټک آرام.","که ډاکټر ووایي د ورزش مخکې."],
+    sec2Title:"څنګه وکارول شي؟",
+    sec2:[
+      "اکثره د اړتیا پر وخت د پلان له مخې.",
+      "سپری: وښوروه، ساه وباسه، یو پف او <span class='highlight'>ورو او ژور</span> ساه دننه کړه، 5–10 ثانیې ونیسه.",
+      "سپېسر مرسته کوي.",
+      "که ډېر اړتیا وي له ډاکټر سره اړیکه ونیسه."
+    ],
+    sec3Title:"خواړه او څښاک",
+    sec3:["له خوړو سره تړاو نه لري.","که خوله وچه شي اوبه وڅښئ."],
+    sec4Title:"خبرداری",
+    sec4:["که شدید حمله وي یا عادي شان اثر ونه کړي بیړنۍ مرسته وغواړئ.","زیات استعمال خطر لري؛ په ډېر اړتیا کې ډاکټر ته ووایئ."],
+    sec5Title:"اړخیزې اغېزې",
+    sec5:["رېږدېدل، د زړه درزا، بې‌قراري.","سر درد یا د عضلو کرامپ.","نادر: لنډ مهاله تحریک."],
+    sec6Title:"تداخلات",
+    sec6:["ځینې بتابلاکرونه اثر کموي.","خپل ټول درمل وښایئ."],
+    sec7Title:"رمضان",
+    sec7:["که د دین له پلوه شک وي له امام او ډاکټر سره خبرې وکړئ.","د صحت لپاره د اړتیا پر وخت وکاروئ."],
+    sec8Title:"ساتنه",
+    sec8:["په خونې تودوخې او له ماشومانو لرې وساتئ.","له تودوخې او لمره یې وساتئ.","انقضا وګورئ."],
+    footer1:"د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
+    footer2:"چمتو کوونکی: ابراهیم ظاهر حنف"
   }
 };
-
-["ar","tr","ur","fa","prs","ps"].forEach(l=>{ if(!T[l]) T[l]=T.en; });
 
 function applyLang(lang){
   const d = T[lang] || T.da;
